[gd_scene load_steps=6 format=3 uid="uid://d3mb57w65turn"]

[ext_resource type="Script" path="res://prefabs/marmelade_segment.gd" id="1_dwth4"]
[ext_resource type="Texture2D" uid="uid://djajhv1xyo0ym" path="res://icon.svg" id="1_gi6m4"]
[ext_resource type="Script" path="res://prefabs/SegmentsStates/segment_state_machine.gd" id="3_f17m7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_krc6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gi6m4")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gi6m4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cbexq"]
radius = 40.4475

[node name="MarmeladeSegment" type="RigidBody2D"]
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1_dwth4")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_krc6k")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_cbexq")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(30, 0)
scale = Vector2(0.5, 0.5)
disable_collision = false

[node name="RayCast" type="RayCast2D" parent="."]
scale = Vector2(0.5, 0.5)
target_position = Vector2(0, -70)
collision_mask = 2

[node name="RayCast2" type="RayCast2D" parent="."]
scale = Vector2(0.5, 0.5)
target_position = Vector2(0, 70)
collision_mask = 2

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_f17m7")

[node name="RaycastTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="RaycastTimer" to="." method="raycast_timer_timeout"]
